# commuter-backend

./: README.md  pyproject.toml
addresses/: admin.py  models.py
addresses/migrations/: 0001_initial.py  0002_alter_address_address_type.py  0003_alter_address_address_type.py  0004_alter_address_address_type.py
categories/: admin.py  models.py
categories/migrations/: 0001_initial.py  0002_alter_category_kind.py
common/: models.py
companies/: admin.py  models.py
companies/migrations/: 0001_initial.py  0002_alter_company_options.py  0003_company_company_type.py  0004_alter_company_company_type.py
config/: settings.py
people_in_charge/: admin.py  apps.py  models.py
people_in_charge/migrations/: 0001_initial.py  0002_alter_personincharge_options.py
posts/: admin.py  models.py
posts/migrations/: 0001_initial.py  0002_rename_work_place_post_workplace.py  0003_occupation_post_occupations.py  0004_remove_post_title.py  0005_remove_post_occupations_post_category_and_more.py  0006_resume.py  0007_delete_resume.py
resumes/: admin.py  models.py
resumes/migrations/: 0001_initial.py  0002_alter_resume_content.py  0003_resume_is_confirm.py
users/: admin.py  models.py
users/migrations/: 0001_initial.py  0002_user_mobile_carrier_user_name_user_phone_and_more.py  0003_rename_phone_verified_user_is_phone_number_verified_and_more.py  0004_alter_user_gender_alter_user_mobile_carrier.py  0005_user_company_user_is_host.py  0006_user_address_user_is_responsibility_alter_user_email.py  0007_remove_user_is_host.py  (+1 more)
workplaces/: admin.py  models.py
(+6 files in other folders)
