[tool.poetry]
name = "commuter-backend"
version = "0.1.0"
description = ""
authors = ["CHOI HYUNWOO <kr.choi.hyunwoo@gmail.com>"]
readme = "README.md"
packages = [{include = "commuter_backend"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.3"


[tool.poetry.group.dev.dependencies]
pylint = "^2.15.6"
black = {version = "^22.10.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
